"IMplemented routing functionality and made menu plus dynamic cards"

--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "namaste-react",
   "version": "1.0.0",
   "description": "This is Namaste react By akshay saini",
-  
   "scripts": {
     "test": "jest",
-    "start":"parcel index.html",
-    "build":"parcel build index.html"
-
+    "start": "parcel index.html",
+    "build": "parcel build index.html"
   },
   "author": "Shivansh Chaturvedi",
   "license": "ISC",
@@ -17,6 +15,7 @@
   },
   "dependencies": {
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^6.22.0"
   }
 }
