--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "license": "ISC",
   "devDependencies": {
     "parcel": "^2.13.3",
+    "postcss": "^8.5.3",
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.6.0",
+    "@tailwindcss/postcss": "^4.0.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.22.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^6.22.0",
+    "tailwindcss": "^4.0.8"
   }
 }
